Embrace AWS SDK v2 everywhere
- Use v2 clients both in the migrator and in the tests
- Use Waiters instead of `Thread.sleep`
- Add more AWS configuration properties as required by the S3 and DynamoDB clients